[package]
name = "appauth"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64-simd = { workspace = true }
common.workspace = true
hex-simd = { workspace = true }
rand.workspace = true
rsa = { workspace = true }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
