[package]
name = "crypto"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = { workspace = true, features = ["std"], optional = true }
argon2 = { workspace = true, features = ["std"], optional = true }
cfg-if = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
pbkdf2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
serde_json.workspace = true


[dev-dependencies]
test-case.workspace = true
time.workspace = true

[features]
default = ["crypto", "fips"]
fips = []
crypto = [
    "dep:aes-gcm",
    "dep:argon2",
    "dep:chacha20poly1305",
    "dep:pbkdf2",
    "dep:rand",
    "dep:sha2",
]
