[package]
name = "madmin"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
common.workspace = true
psutil = "3.3.0"
serde.workspace = true
time.workspace =true
