[package]
name = "madmin"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
common.workspace = true
humantime.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
