[package]
name = "policy"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
time = { workspace = true, features = ["serde-human-readable"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
strum = { workspace = true, features = ["derive"] }
arc-swap = "1.7.1"
crypto = { path = "../crypto" }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
futures.workspace = true
rand.workspace = true
base64-simd = { workspace = true }
jsonwebtoken = { workspace = true }
tracing.workspace = true
madmin.workspace = true
lazy_static.workspace = true
regex = { workspace = true }
common.workspace = true

[dev-dependencies]
test-case.workspace = true
